@@ -47,6 +47,7 @@ package org.lsc.service;
 
 import java.io.Closeable;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
@@ -69,16 +70,17 @@ import org.apache.directory.api.ldap.extras.controls.syncrepl.syncRequest.SyncRe
 import org.apache.directory.api.ldap.extras.controls.syncrepl.syncState.SyncStateTypeEnum;
 import org.apache.directory.api.ldap.extras.controls.syncrepl.syncState.SyncStateValue;
 import org.apache.directory.api.ldap.extras.intermediate.syncrepl.SyncInfoValue;
+import org.apache.directory.api.ldap.model.constants.SchemaConstants;
 import org.apache.directory.api.ldap.model.cursor.EntryCursor;
 import org.apache.directory.api.ldap.model.entry.Attribute;
 import org.apache.directory.api.ldap.model.entry.Entry;
 import org.apache.directory.api.ldap.model.entry.Value;
 import org.apache.directory.api.ldap.model.exception.LdapException;
-import org.apache.directory.api.ldap.model.exception.LdapInvalidDnException;
 import org.apache.directory.api.ldap.model.message.*;
 import org.apache.directory.api.ldap.model.message.controls.AbstractControl;
 import org.apache.directory.api.ldap.model.message.controls.PersistentSearch;
 import org.apache.directory.api.ldap.model.message.controls.PersistentSearchImpl;
+import org.apache.directory.api.ldap.model.message.extended.SearchNoDResponse;
 import org.apache.directory.api.ldap.model.name.Dn;
 import org.apache.directory.api.ldap.model.url.LdapUrl;
 import org.apache.directory.ldap.client.api.LdapAsyncConnection;
@@ -88,6 +90,7 @@ import org.apache.directory.ldap.client.api.future.SearchFuture;
 import org.lsc.LscDatasets;
 import org.lsc.beans.IBean;
 import org.lsc.configuration.*;
+import org.lsc.exception.LscException;
 import org.lsc.exception.LscServiceCommunicationException;
 import org.lsc.exception.LscServiceConfigurationException;
 import org.lsc.exception.LscServiceException;
@@ -172,13 +175,7 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
 			} else {
 				return null;
 			}
-//		} catch (org.apache.directory.shared.ldap.model.exception.LdapURLEncodingException e) {
-//			throw new LscServiceConfigurationException(e.toString(), e);
-		} catch (LdapException e) {
-			throw new LscServiceConfigurationException(e.toString(), e);
-		} catch (NoSuchAlgorithmException e) {
-			throw new LscServiceConfigurationException(e.toString(), e);
-		} catch (KeyStoreException e) {
+		} catch (LdapException | NoSuchAlgorithmException | KeyStoreException e) {
 			throw new LscServiceConfigurationException(e.toString(), e);
 		}
 	}
@@ -196,9 +193,7 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
 			}
 			return convertSearchEntries(connection.search(getBaseDn(), getFilterAll(), SearchScope.SUBTREE,
                     getAttrsId().toArray(new String[0])));
-		} catch (RuntimeException e) {
-			throw new LscServiceException(e.toString(), e);
-		} catch (LdapException e) {
+		} catch (RuntimeException | LdapException e) {
 			throw new LscServiceException(e.toString(), e);
 		}
 	}
@@ -243,29 +238,42 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
 			searchString = filterIdSync.replaceAll("\\{0\\}", id);
 		}
 
+        // Do the actual search, but with a retry
 		try {
 			EntryCursor entryCursor = null;
 			
 			// When launching getBean in clean phase, the search base should be the Base DN, not the entry ID
 			String searchBaseDn = (fromSameService ? id : baseDn);
 			SearchScope searchScope = (fromSameService ? SearchScope.OBJECT : SearchScope.SUBTREE);
-			
-			if (!connection.isConnected()) {
-				connection = getConnection(ldapConn);
-			}
-			
-			if(getAttrs() != null) {
-				List<String> attrList = new ArrayList<String>(getAttrs());
-				attrList.addAll(pivotAttrs.getAttributesNames());
-                entryCursor = connection.search(searchBaseDn, searchString, searchScope, 
-                        attrList.toArray(new String[0]));
-			} else {
-				entryCursor = connection.search(searchBaseDn, searchString, searchScope);
+
+			while (true) {
+                try {
+        			if (!connection.isConnected()) {
+        				connection = getConnection(ldapConn);
+        			}
+        			
+        			if(getAttrs() != null) {
+        				List<String> attrList = new ArrayList<String>(getAttrs());
+        				attrList.addAll(pivotAttrs.getAttributesNames());
+                        entryCursor = connection.search(searchBaseDn, searchString, searchScope, 
+                                attrList.toArray(new String[0]));
+                        
+                        break;
+        			} else {
+        				entryCursor = connection.search(searchBaseDn, searchString, searchScope);
+                        
+                        break;
+                    }
+                } catch(Exception e) {
+                    // Let's retry after having wait for 1 second
+                    LOGGER.error("Cannot connect, will retry in 5s: {}", e.getMessage());
+                    Thread.sleep(5000L);
+                }
 			}
 
             // Fetch the first entry found, and close the cursor
             for ( Entry entry:entryCursor ) {
-                srcBean = beanClass.newInstance();
+                srcBean = beanClass.getDeclaredConstructor().newInstance();
 
                 srcBean.setMainIdentifier(entry.getDn().getName());
                 srcBean.setDatasets(convertEntry(entry));
@@ -276,10 +284,8 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
 			entryCursor.close();
 			
 			return srcBean;
-		} catch (InstantiationException e) {
-            LOGGER.error("Bad class name: {}({})", beanClass.getName(), e);
-			LOGGER.debug(e.toString(), e);
-		} catch (IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                InvocationTargetException e) {
             LOGGER.error("Bad class name: {}({})", beanClass.getName(), e);
 			LOGGER.debug(e.toString(), e);
 		} catch (Exception e) {
@@ -322,8 +328,6 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
             // Now do a search in asynchronous mode
             searchFuture = getConnection(ldapConn).searchAsync(searchRequest);
             refreshStart = System.currentTimeMillis();
-		} catch (LdapInvalidDnException e) {
-			throw new LscServiceException(e.toString(), e);
 		} catch (LdapException e) {
 			throw new LscServiceException(e.toString(), e);
 		}
@@ -332,80 +336,118 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
     
     @Override
     public Map.Entry<String, LscDatasets> getNextId() throws LscServiceException {
-        if ((searchFuture == null) || searchFuture.isCancelled()) {
-            createSearchFuture();
-        }
+        boolean retry = true;
+        int nbRetries = 0;
         
         // Ok, we are ready. Get the first entry that waits
         try {
-            
-            Response searchResponse = searchFuture.get();
-            
-            if (searchResponse == null) {
-                // Not a SearchResponse instance...
-                return null;
-            } else if ( searchResponse instanceof SearchResultEntry) {
-                // We've got something that may be an entry, a referral or an SyncInfo Value
-                // Intermediate response (at the end of the refresh phase)
-                SearchResultEntry searchResultEntry = ((SearchResultEntry) searchResponse);
-                Dn entryDn = searchResultEntry.getObjectName();
-                    
-                LOGGER.info( "Processing entry {}", entryDn);
-            
-                switch (searchResultEntry.getType()) {
-                    case SEARCH_RESULT_ENTRY:
-                        // A plain entry. Let's check it's status, it may be for a deleted
-                        // entry
-                        LscDatasets datasets = convertEntry(searchResultEntry.getEntry(), true);
+            while ( retry ) {
+                if ((searchFuture == null) || searchFuture.isCancelled()) {
+                    try {
+                        createSearchFuture();
                         
-                        // Check if it's a deletion
-                        SyncStateValue syncStateCtrl = ( SyncStateValue ) searchResponse.getControl( SyncStateValue.OID );
-                        
-                        if ((syncStateCtrl != null) && (syncStateCtrl.getSyncStateType() == SyncStateTypeEnum.DELETE)) {
-                            // It's a deletion, add a special attribute that is not valid in LDAP
-                            // (because of the starting '_'. That will mark the entry as deleted
-                            datasets.getDatasets().put(DELETED_ENTRY, entryDn);
+                        if ( nbRetries > 0 ) {
+                            LOGGER.info( "Reconnected to the source!");
+                        } else {
+                            LOGGER.info( "Connected to the source, search started");
                         }
 
-                        return Map.entry(entryDn.toString(), datasets);
+                        nbRetries = 0;
+                    } catch ( LscException le ) {
+                        // Let's try again
+                        nbRetries++;
+                        LOGGER.info( "Not connected, waiting 5s and retrying, attempt #{}", nbRetries);
                         
-                    case SEARCH_RESULT_REFERENCE:
-                        // TODO...
-                        return null;
+                        // Wait 5 secondes
+                        Thread.sleep( 5000 );
                         
-                    case SEARCH_RESULT_DONE:
-                        // This is the end, beautiful friend,
-                        // This is the end, my only friend
-                        // (The Doors)
-                        LdapResult result = ((SearchResultDone)searchResultEntry).getLdapResult();
-                        
-                        if (result.getResultCode() != ResultCodeEnum.SUCCESS) {
-                            throw new LscServiceCommunicationException(result.getDiagnosticMessage(), null);
-                        }
-                        
-                        searchFuture = null;
-                        
-                        return null;
-                        
-                    default:
-                        // Can't be...
-                        return null;
+                        // Let's retry 
+                        continue;
+                    }
                 }
-            } else if ( searchResponse instanceof SyncInfoValue ){
-                // This is the end of the refresh phase, log the info
-                SyncInfoValue syncInfoValue = (SyncInfoValue)searchResponse;
-                LOGGER.info("Refresh phase done: {} in {} ms", syncInfoValue.isRefreshDone(),
-                        System.currentTimeMillis() - refreshStart);
+
+                Response searchResponse = searchFuture.get();
+            
+                if (searchResponse == null) {
+                    // Not a SearchResponse instance...
+                    return null;
+                } else if ( searchResponse instanceof SearchNoDResponse ) {
+                    // We may have lost the connection, check that
+                    if ( !connection.isConnected() )
+                    {
+                        LOGGER.info( "Not connected, retrying...");
+
+                        // Let's retry 
+                        continue;
+                    }
+                    else {
+                        return null;
+                    }
+                } else if ( searchResponse instanceof SearchResultEntry) {
+                    // We've got something that may be an entry, a referral or an SyncInfo Value
+                    // Intermediate response (at the end of the refresh phase)
+                    SearchResultEntry searchResultEntry = ((SearchResultEntry) searchResponse);
+                    Dn entryDn = searchResultEntry.getObjectName();
+                        
+                    LOGGER.info( "Processing entry {}", entryDn);
                 
-                // Now we are done with the refresh, we need to cleanup the destination
-                // by removing the deleted entries 
-                cleanupDestination();
-                
-                return null;
-            } else {
-                // Can't be
-                return null;
+                    switch (searchResultEntry.getType()) {
+                        case SEARCH_RESULT_ENTRY:
+                            // A plain entry. Let's check it's status, it may be for a deleted
+                            // entry
+                            LscDatasets datasets = convertEntry(searchResultEntry.getEntry(), true);
+                            
+                            // Check if it's a deletion
+                            SyncStateValue syncStateCtrl = ( SyncStateValue ) searchResponse.getControl( SyncStateValue.OID );
+                            
+                            if ((syncStateCtrl != null) && (syncStateCtrl.getSyncStateType() == SyncStateTypeEnum.DELETE)) {
+                                // It's a deletion, add a special attribute that is not valid in LDAP
+                                // (because of the starting '_'. That will mark the entry as deleted
+                                datasets.getDatasets().put(DELETED_ENTRY, entryDn);
+                            }
+    
+                            return Map.entry(entryDn.toString(), datasets);
+                            
+                        case SEARCH_RESULT_REFERENCE:
+                            // TODO...
+                            return null;
+                            
+                        case SEARCH_RESULT_DONE:
+                            // This is the end, beautiful friend,
+                            // This is the end, my only friend
+                            // (The Doors)
+                            LdapResult result = ((SearchResultDone)searchResultEntry).getLdapResult();
+                            
+                            if (result.getResultCode() != ResultCodeEnum.SUCCESS) {
+                                throw new LscServiceCommunicationException(result.getDiagnosticMessage(), null);
+                            }
+                            
+                            searchFuture = null;
+                            
+                            return null;
+                            
+                        default:
+                            // Can't be...
+                            return null;
+                    }
+                } else if ( searchResponse instanceof SyncInfoValue ){
+                    // This is the end of the refresh phase, log the info
+                    SyncInfoValue syncInfoValue = (SyncInfoValue)searchResponse;
+                    LOGGER.info("Refresh phase done: {} in {} ms", syncInfoValue.isRefreshDone(),
+                            System.currentTimeMillis() - refreshStart);
+                    
+                    // Now we are done with the refresh, we need to cleanup the destination
+                    // by removing the deleted entries 
+                    cleanupDestination();
+                    
+                    return null;
+                } else {
+                    // Can't be
+                    return null;
+                }
             }
+            
+            return null;
         } catch (InterruptedException e) {
             LOGGER.warn("Interrupted search !");
             
@@ -493,17 +535,24 @@ public class SyncReplSourceService extends SimpleJndiSrcService implements IAsyn
             for ( Attribute attribute:entry ) {
                 if(attribute.size() > 0){
                     String id = attribute.getId();
-					Set<Object> datasetsValues = new HashSet<Object>();
                     
-                    for ( Value value:attribute) {
-						if (value.isHumanReadable()) {
-							datasetsValues.add(value.getString());
-						} else {
-							datasetsValues.add(value.getBytes());
+                    if (attribute.isHumanReadable()) {
+                        Set<String> datasetsValues = new HashSet<>();
+                    
+                        for ( Value value:attribute) {
+    						datasetsValues.add(value.getString());
+                        }
+                        
+                        dataSets.put(id, datasetsValues);
+					} else {
+                        Set<byte[]> datasetsValues = new HashSet<>();
+                        
+                        for ( Value value:attribute) {
+                            datasetsValues.add(value.getBytes());
 						}
-					}
 
-                    dataSets.put(id, datasetsValues);
+                        dataSets.put(id, datasetsValues);
+					}
                 }
             }
 		}
